# MT-QE

./: .coveragerc  .gitignore  README.md  TrainingPerformance.md  pyproject.toml  requirements.txt  run_master.sh  run_worker.sh
.github/workflows/: ci.yaml
data/: fails.txt  how_to_get_data.txt
src/: callback_gpu.py  common.py  dat_wmt.py  dat_wmt_embedded.py  eda.ipynb  eda.py  embedded_dataset.py  embedder_fasttext.py  embedder_glove.py  embedder_wordnet.py  embedders.py  gcn.py  model2.py  model3.py  pl_model_transformer.py  sent2graph.py  text_graph_dataset.py  train_gcn.py  train_model2.py  train_model3.py  train_transformer.py
tests/: test_embedder_bert_mult.py  test_embedder_glove.py  test_embedder_wordnet.py  test_gcn_train.py  test_graph_datamodule.py  test_sent2graph.py
